--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,21 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="BtnGetStartedRegular" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:text">@string/btn_get_started</item>
+    </style>
+
+    <style name="BtnGetStartedHighlighted" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@android:color/primary_text_dark</item>
+        <item name="android:text">@string/btn_get_started</item>
+    </style>
+
     <!--style name-->
 
 </resources>
