--- a/app/src/main/res/layout/activity_setup_screen1.xml
+++ b/app/src/main/res/layout/activity_setup_screen1.xml
@@ -191,7 +191,8 @@
         app:layout_constraintTop_toBottomOf="@id/guideline_70percent">
 
         <Button
-            style="@style/BtnGetStartedHighlighted"
+            style="@style/BtnSetupHighlighted"
+            android:text="@string/btn_get_started"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
