--- a/app/src/main/res/layout/activity_setup_screen2.xml
+++ b/app/src/main/res/layout/activity_setup_screen2.xml
@@ -7,181 +7,75 @@
     tools:context=".SetupScreen1">
 
     <android.support.constraint.Guideline
-        android:id="@+id/guideline_60percent"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6" />
-
-    <android.support.constraint.Guideline
         android:id="@+id/guideline_70percent"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.7" />
 
-    <ViewFlipper
-        android:id="@+id/view_flipper"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guideline_70percent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        android:inAnimation="@android:anim/fade_in"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_60percent"
-        app:layout_constraintTop_toTopOf="parent">
+        <!-- Horizontal guidelines used for view arrangement-->
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline_top_layout_horizontal_20percent"
+            style="@style/HorizontalGuideline"
+            app:layout_constraintGuide_percent="0.2" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline_top_layout_horizontal_60percent"
+            style="@style/HorizontalGuideline"
+            app:layout_constraintGuide_percent="0.6" />
 
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginBottom="15dp"
-                android:contentDescription="@string/setup_screen_1_p1_imgDescription"
-                android:src="@drawable/ic_polymer_blue_800_24dp" />
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline_top_layout_horizontal_70percent"
+            style="@style/HorizontalGuideline"
+            app:layout_constraintGuide_percent="0.7" />
 
-            <TextView
-                style="@style/SetupHeading"
-                android:text="@string/setup_screen_1_p1_heading" />
+        <!-- Vertical guidelines used for view arrangement-->
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline_top_layout_vertical_10percent"
+            style="@style/VerticalGuideline"
+            app:layout_constraintGuide_percent=".1" />
 
-            <TextView
-                style="@style/SetupBodyText"
-                android:text="@string/setup_screen_1_p1_bodyText" />
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline_top_layout_vertical_90percent"
+            style="@style/VerticalGuideline"
+            app:layout_constraintGuide_percent=".9" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginBottom="15dp"
-                android:contentDescription="@string/setup_screen_1_p1_imgDescription"
-                android:src="@drawable/ic_polymer_blue_800_24dp" />
-
-            <TextView
-                style="@style/SetupHeading"
-                android:text="@string/setup_screen_1_p2_heading" />
-
-            <TextView
-                style="@style/SetupBodyText"
-                android:text="@string/setup_screen_1_p2_bodyText" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginBottom="15dp"
-                android:contentDescription="@string/setup_screen_1_p3_imgDescription"
-                android:src="@drawable/ic_polymer_blue_800_24dp" />
-
-            <TextView
-                style="@style/SetupHeading"
-                android:text="@string/setup_screen_1_p3_heading" />
-
-            <TextView
-                style="@style/SetupBodyText"
-                android:text="@string/setup_screen_1_p3_bodyText" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginBottom="15dp"
-                android:contentDescription="@string/setup_screen_1_p4_imgDescription"
-                android:src="@drawable/ic_polymer_blue_800_24dp" />
-
-            <TextView
-                style="@style/SetupHeading"
-                android:text="@string/setup_screen_1_p4_heading" />
-
-            <TextView
-                style="@style/SetupBodyText"
-                android:text="@string/setup_screen_1_p4_bodyText" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginBottom="15dp"
-                android:contentDescription="@string/setup_screen_1_p5_imgDescription"
-                android:src="@drawable/ic_polymer_blue_800_24dp" />
-
-            <TextView
-                style="@style/SetupHeading"
-                android:text="@string/setup_screen_1_p5_heading" />
-
-            <TextView
-                style="@style/SetupBodyText"
-                android:text="@string/setup_screen_1_p5_bodyText" />
-
-        </LinearLayout>
-
-    </ViewFlipper>
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_70percent"
-        app:layout_constraintTop_toTopOf="@id/guideline_60percent">
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="68dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/btn_previous_description"
-            android:onClick="previousView"
-            android:src="@drawable/ic_chevron_left"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_top_layout_horizontal_60percent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.545" />
+            app:layout_constraintTop_toTopOf="@id/guideline_top_layout_horizontal_20percent"
+            android:src="@drawable/ic_polymer_blue_800_24dp"
+            android:contentDescription="@string/setup_screen_2_p1_imgDescription"/>
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/heading"
+            style="@style/SetupHeading"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="68dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/btn_next_description"
-            android:onClick="nextView"
-            android:src="@drawable/ic_chevron_right"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.545" />
+            android:text="@string/setup_screen_2_p1_heading"
+            app:layout_constraintStart_toStartOf="@id/guideline_top_layout_vertical_10percent"
+            app:layout_constraintEnd_toEndOf="@id/guideline_top_layout_vertical_90percent"
+            app:layout_constraintTop_toTopOf="@id/guideline_top_layout_horizontal_70percent"
+
+            />
+
+        <TextView
+            style="@style/SetupBodyText"
+            android:text="@string/setup_screen_2_p1_bodyText"
+            app:layout_constraintTop_toBottomOf="@id/heading"
+            app:layout_constraintStart_toStartOf="@id/guideline_top_layout_vertical_10percent"
+            app:layout_constraintEnd_toEndOf="@id/guideline_top_layout_vertical_90percent" />
     </android.support.constraint.ConstraintLayout>
 
 
@@ -193,7 +87,8 @@
         app:layout_constraintTop_toBottomOf="@id/guideline_70percent">
 
         <Button
-            style="@style/BtnGetStartedHighlighted"
+            style="@style/BtnSetupHighlighted"
+            android:text="Yes, let's do it!"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
