--- a/app/src/main/res/layout/activity_setup_screen2.xml
+++ b/app/src/main/res/layout/activity_setup_screen2.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent">
 
             <android.support.constraint.Guideline
-                android:id="@+id/guideline_p1_70percent"
+                android:id="@+id/guideline_p1_80percent"
                 android:layout_width="1dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/guideline_p1_70percent"
+                app:layout_constraintBottom_toTopOf="@id/guideline_p1_80percent"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -92,7 +92,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/guideline_p1_70percent">
+                app:layout_constraintTop_toBottomOf="@id/guideline_p1_80percent">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="wrap_content"
@@ -128,23 +128,23 @@
 
             </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
-
+        
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <android.support.constraint.Guideline
-                android:id="@+id/guideline_p2_70percent"
+                android:id="@+id/guideline_p2_80percent"
                 android:layout_width="1dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.7" />
+                app:layout_constraintGuide_percent="0.8" />
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/guideline_p2_70percent"
+                app:layout_constraintBottom_toTopOf="@id/guideline_p2_80percent"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -192,13 +192,14 @@
                     app:layout_constraintStart_toStartOf="@id/guideline_p2_top_layout_vertical_10percent"
                     app:layout_constraintEnd_toEndOf="@id/guideline_p2_top_layout_vertical_90percent" />
 
-                <TextView
+                <ListView
                     android:id="@+id/p2_body_text"
                     style="@style/SetupBodyText"
-                    android:text="@string/setup_screen_2_p2_bodyText"
-                    app:layout_constraintTop_toBottomOf="@id/p2_heading"
+                    android:layout_height="0dp"
+                    app:layout_constraintEnd_toEndOf="@id/guideline_p2_top_layout_vertical_90percent"
                     app:layout_constraintStart_toStartOf="@id/guideline_p2_top_layout_vertical_10percent"
-                    app:layout_constraintEnd_toEndOf="@id/guideline_p2_top_layout_vertical_90percent" />
+                    app:layout_constraintTop_toBottomOf="@id/p2_heading"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
@@ -210,7 +211,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/guideline_p2_70percent">
+                app:layout_constraintTop_toBottomOf="@id/guideline_p2_80percent">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="wrap_content"
@@ -221,31 +222,124 @@
                     app:layout_constraintBottom_toBottomOf="parent" >
 
                     <Button
-                        android:id="@+id/p2_btn_skip"
-                        style="@style/BtnSetupRegular"
-                        android:layout_width="150dp"
-                        android:layout_marginTop="0dp"
-                        android:text="No, I don't own one."
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <Button
                         android:id="@+id/p2_btn_next"
                         style="@style/BtnSetupHighlighted"
                         android:layout_width="150dp"
                         android:layout_marginBottom="0dp"
                         android:onClick="nextView"
-                        android:text="Yes, let's do it!"
+                        android:text="Next"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/p2_btn_skip" />
+                        app:layout_constraintStart_toStartOf="parent" />
                 </android.support.constraint.ConstraintLayout>
 
             </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
 
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline_p3_80percent"
+                android:layout_width="1dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.7" />
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/guideline_p3_80percent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <!-- Horizontal guidelines used for view arrangement-->
+                <android.support.constraint.Guideline
+                    android:id="@+id/guideline_p3_top_layout_horizontal_10percent"
+                    style="@style/HorizontalGuideline"
+                    app:layout_constraintGuide_percent="0.10" />
+
+                <android.support.constraint.Guideline
+                    android:id="@+id/guideline_p3_top_layout_horizontal_50percent"
+                    style="@style/HorizontalGuideline"
+                    app:layout_constraintGuide_percent="0.5" />
+
+                <android.support.constraint.Guideline
+                    android:id="@+id/guideline_p3_top_layout_horizontal_60percent"
+                    style="@style/HorizontalGuideline"
+                    app:layout_constraintGuide_percent="0.6" />
+
+                <!-- Vertical guidelines used for view arrangement-->
+                <android.support.constraint.Guideline
+                    android:id="@+id/guideline_p3_top_layout_vertical_10percent"
+                    style="@style/VerticalGuideline"
+                    app:layout_constraintGuide_percent=".1" />
+
+                <android.support.constraint.Guideline
+                    android:id="@+id/guideline_p3_top_layout_vertical_90percent"
+                    style="@style/VerticalGuideline"
+                    app:layout_constraintGuide_percent=".9" />
+
+                <ImageView
+                    android:id="@+id/p3_illustration"
+                    style="@style/SetupIllustration"
+                    app:layout_constraintBottom_toBottomOf="@id/guideline_p3_top_layout_horizontal_50percent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/guideline_p3_top_layout_horizontal_10percent"
+                    android:src="@drawable/ic_polymer_blue_800_24dp"
+                    android:contentDescription="@string/setup_screen_2_p3_imgDescription"/>
+
+                <TextView
+                    android:id="@+id/p3_heading"
+                    style="@style/SetupHeading"
+                    android:text="@string/setup_screen_2_p3_heading"
+                    app:layout_constraintTop_toTopOf="@id/guideline_p3_top_layout_horizontal_60percent"
+                    app:layout_constraintStart_toStartOf="@id/guideline_p3_top_layout_vertical_10percent"
+                    app:layout_constraintEnd_toEndOf="@id/guideline_p3_top_layout_vertical_90percent" />
+
+                <TextView
+                    android:id="@+id/p3_body_text"
+                    style="@style/SetupBodyText"
+                    android:text="@string/setup_screen_2_p1_bodyText"
+                    app:layout_constraintTop_toBottomOf="@id/p3_heading"
+                    app:layout_constraintStart_toStartOf="@id/guideline_p3_top_layout_vertical_10percent"
+                    app:layout_constraintEnd_toEndOf="@id/guideline_p3_top_layout_vertical_90percent" />
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="0dp"
+                android:gravity="center_horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/guideline_p3_80percent">
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <Button
+                        android:id="@+id/btn_next_screen"
+                        style="@style/BtnSetupHighlighted"
+                        android:layout_width="150dp"
+                        android:layout_marginBottom="0dp"
+                        android:onClick="nextScreen"
+                        android:text="Next"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+            </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
 
 
     </ViewFlipper>
